--- a/src/components/PresentacionAula.astro
+++ b/src/components/PresentacionAula.astro
@@ -4,10 +4,10 @@
       <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 sm:gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-2 flex flex-col items-center">
         <div class="lg:pt-4 lg:pr-8">
           <div class="lg:max-w-lg text-left flex flex-col items-center lg:items-start lg:block">
-            <h2 class="text-base/7 font-semibold verdeMarca">
+            <h2 class="text-base/7 font-semibold verdeMarca text-center">
               Aprueba más rápido
             </h2>
-            <p class="mt-2 text-4xl font-semibold tracking-tight text-pretty textoTitulo sm:text-5xl">
+            <p class="mt-2 text-4xl font-semibold tracking-tight text-pretty textoTitulo sm:text-5xl text-center">
               Un mejor método
             </p>
             <p class="mt-6 text-lg/8 textoSubtitulo text-center">
