--- a/src/components/PresentacionVehiculos.astro
+++ b/src/components/PresentacionVehiculos.astro
@@ -20,11 +20,11 @@
                     <div
                         class="lg:max-w-lg text-left flex flex-col items-center lg:items-start lg:block"
                     >
-                        <h2 class="text-base/7 font-semibold verdeMarca">
+                        <h2 class="text-base/7 font-semibold verdeMarca text-center">
                             Aprueba más rápido
                         </h2>
                         <p
-                            class="mt-2 text-4xl font-semibold tracking-tight text-pretty textoTitulo sm:text-5xl"
+                            class="mt-2 text-4xl font-semibold tracking-tight text-pretty textoTitulo sm:text-5xl text-center"
                         >
                             Un mejor método
                         </p>
